--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,22 +4,22 @@
 
   <!--SLIDER-->
   <ul class="rslides">
-    <li id="slide1"><img src="/assets/banner1.jpg" alt="banner1">
+    <li id="slide1"><img src="/banner1.jpg" alt="banner1">
       <div class="banner-text">
 
         <p>Sabe que ponerte todos los días!</p>
       </div></li>
-    <li id="slide2"><img src="/assets/banner2.jpg" alt="banner2">
+    <li id="slide2"><img src="/banner2.jpg" alt="banner2">
       <div class="banner-text">
         <p>¿Qué me pongo?</p>
       </div>
     </li>
-    <li id="slide3"><img src="/assets/banner3.jpg" alt="banner3">
+    <li id="slide3"><img src="/banner3.jpg" alt="banner3">
       <div class="banner-text">
         <p>Sabe que ponerte todos los días!</p>
       </div>
     </li>
-    <li id="slide4"><img src="/assets/banner4.jpg" alt="banner4">
+    <li id="slide4"><img src="/banner4.jpg" alt="banner4">
       <div class="banner-text">
         <p>¿Qué me pongo?</p>
       </div>
@@ -30,7 +30,7 @@
 <!-----ABOUT QMP----->
 <div id="about">
   <figure class="about-image">
-    <img src="/assets/about-text-1.jpg" alt="about-text-1">
+    <img src="/about-text-1.jpg" alt="about-text-1">
   </figure>
   <section class="about-text">
     <h2>Vestite según el tiempo</h2>
@@ -45,7 +45,7 @@
   <div class="inner-container">
     <h2>Sobre nosotros</h2>
     <figure class="about-section-image">
-      <img src="/assets/about-text-4.jpg" alt="about-text-4">
+      <img src="/about-text-4.jpg" alt="about-text-4">
     </figure>
     <section class="text-about">
       <p>
@@ -64,37 +64,37 @@
     <ul class="weather-list">
       <li>
         <a href="" target="_blank">
-          <img src="/assets/weather1.jpg" alt="sunny-img">
+          <img src="/weather1.jpg" alt="sunny-img">
           <div class="weather-text">Soleado</div>
         </a>
       </li>
       <li>
         <a href="" target="_blank">
-          <img src="/assets/weather2.jpg" alt="rainy-img">
+          <img src="/weather2.jpg" alt="rainy-img">
           <div class="weather-text">Lluvioso</div>
         </a>
       </li>
       <li>
         <a href="" target="_blank">
-          <img src="/assets/weather3.jpg" alt="snow-img">
+          <img src="/weather3.jpg" alt="snow-img">
           <div class="weather-text">Nieve</div>
         </a>
       </li>
       <li>
         <a href="" target="_blank">
-          <img src="/assets/weather4.jpg" alt="beach-img">
+          <img src="/weather4.jpg" alt="beach-img">
           <div class="weather-text">Playa</div>
         </a>
       </li>
       <li>
         <a href="" target="_blank">
-          <img src="/assets/weather5.jpg" alt="mountain-img">
+          <img src="/weather5.jpg" alt="mountain-img">
           <div class="weather-text">Montaña</div>
         </a>
       </li>
       <li>
         <a href="" target="_blank">
-          <img src="/assets/weather6.jpg" alt="skii-img">
+          <img src="/weather6.jpg" alt="skii-img">
           <div class="weather-text">Esquí</div>
         </a>
       </li>
@@ -112,22 +112,22 @@
       Estamos a tu servicio.</p>
     <section class="students-all">
       <article class="student">
-        <img src="/assets/student1.png" alt="student-1">
+        <img src="/student1.png" alt="student-1">
         <h3>Melisa</h3>
         <p>Directora de información y tecnología. Responsable principal de del desarrollo, optimización y seguridad en el área IT.</p>
       </article>
       <article class="student">
-        <img src="/assets/student2.png" alt="student-2">
+        <img src="/student2.png" alt="student-2">
         <h3>César</h3>
         <p>Director de finanzas. Jefe del equipo responsable de las inversiones y financiaciones de la empresa.</p>
       </article>
       <article class="student">
-        <img src="/assets/student3.png" alt="student-3">
+        <img src="/student3.png" alt="student-3">
         <h3>Stefano</h3>
         <p>Director ejecutivo de la empresa. Propietario, fundador y rostro de QuéMePongo desde 2020.</p>
       </article>
       <article class="student">
-        <img src="/assets/student4.png" alt="student-4">
+        <img src="/student4.png" alt="student-4">
         <h3>Uziel</h3>
         <p>Director de marketing y ventas. Líder estratégico del equipo encargado del mercadeo y publicidad.</p>
       </article>
