--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,8 +124,9 @@
       <a>Políticas de Privacidad</a>
     </div>
     <p> © 2021, Shrine </p>
-    <img src="/assets/logo2.png" alt="logotipo" class="footer-logo">
+    <img src="/logo2.png" alt="logotipo" class="footer-logo">
   </footer>
+
 
   <!--SCRIPTS-->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
