--- a/app/views/atuendos/index.html.erb
+++ b/app/views/atuendos/index.html.erb
@@ -1,22 +1,14 @@
 <div id="atuendos">
   <div class="btn-go-back-guardarropa" ><a href="/guardarropas/<%=+params[:guardarropa_id]%>">Volver a Guardarropa</a></div>
   <h2 class="atuendos-title">Atuendos</h2>
-  <div class="">
+  <div class="atuendos-filter">
     <div class="">
       <%= form_tag guardarropa_atuendos_path, method: :get do %>
         <%= label_tag :estacion_tag, "Filtrar por:" %>
-        <%= select_tag :estacion_tag, options_for_select(Atuendo.estacion_tags.keys.to_a, @estacion_selected), :onchange => "this.form.submit();", :prompt => 'Estación', :class => ''%>
-        <%= select_tag :tiempo_tag, options_for_select(Atuendo.tiempo_tags.keys.to_a, @tiempo_selected), :onchange => "this.form.submit();", :prompt => 'Tiempo',  :class => ''%>
-        <%= select_tag :ocasion_tag, options_for_select(Atuendo.ocasion_tags.keys.to_a, @formalidad_selected), :onchange => "this.form.submit();", :prompt => 'Formalidad',  :class => ''%>
-        <%= label_tag :puntaje_order, "Ordenar puntaje:" %>
-        <%= select_tag :puntaje_order, options_for_select({ "Mayor a menor" => "desc", "Menor a mayor" => "asc" }, @puntaje_order), :onchange => "this.form.submit();", :prompt => 'Seleccione aqui', :class => ''%>
-
-        <%#= select_tag :estacion_tag, options_for_select(Atuendo.estacion_tags.keys.to_a, @estacion_selected), :prompt => 'Estación'%>
-        <%#= select_tag :tiempo_tag, options_for_select(Atuendo.tiempo_tags.keys.to_a, @tiempo_selected),  :prompt => 'Tiempo'%>
-        <%#= select_tag :ocasion_tag, options_for_select(Atuendo.ocasion_tags.keys.to_a, @formalidad_selected), :prompt => 'Formalidad'%>
-        <%#= label_tag :puntaje_order, "Ordenar puntaje:" %>
-        <%#= select_tag :puntaje_order, options_for_select({ "Mayor a menor" => "desc", "Menor a mayor" => "asc" }, @puntaje_order), :prompt => 'Seleccione aqui'%>
-        <%#= submit_tag "Buscar"%>
+        <%= select_tag :estacion_tag, options_for_select(Atuendo.estacion_tags.keys.to_a, @estacion_selected), :onchange => "this.form.submit();", :prompt => 'Estación', :class => 'atuendos-filter-item'%>
+        <%= select_tag :tiempo_tag, options_for_select(Atuendo.tiempo_tags.keys.to_a, @tiempo_selected), :onchange => "this.form.submit();", :prompt => 'Tiempo',  :class => 'atuendos-filter-item'%>
+        <%= select_tag :ocasion_tag, options_for_select(Atuendo.ocasion_tags.keys.to_a, @formalidad_selected), :onchange => "this.form.submit();", :prompt => 'Formalidad',  :class => 'atuendos-filter-item'%>
+        <%= select_tag :puntaje_order, options_for_select({ "Mayor a menor ⭐" => "desc", "Menor a mayor ⭐️" => "asc" }, @puntaje_order), :onchange => "this.form.submit();", :prompt => 'Seleccione aqui', :class => 'atuendos-filter-item'%>
       <% end %>
     </div>
   </div>
