--- a/app/views/prendas/show.html.erb
+++ b/app/views/prendas/show.html.erb
@@ -19,7 +19,7 @@
 
       <%= image_tag(@prenda.imagen) %>
     <%else %>
-      <%=image_tag("public/placeholder.png")%>
+      <%=image_tag("/placeholder.png")%>
     <%end %>
   </div>
 
