--- a/app/views/atuendos/_prenda.html.erb
+++ b/app/views/atuendos/_prenda.html.erb
@@ -3,19 +3,15 @@
     <span> Descripción:
        <%=prenda.descripcion %>
     </span>
-
-<!--    <span>Categoría:-->
-      <%#=prenda.categoria %>
-<!--    </span>-->
     <span> Material:
       <%=prenda.material %>
     </span>
-    <span>Color primario:
-      <%= prenda.color_primario %>
-    </span>
-    <span>Color secundario:
-      <%= prenda.color_secundario %>
-    </span>
+<!--    <span>Color primario:-->
+      <%#= prenda.color_primario %>
+<!--    </span>-->
+<!--    <span>Color secundario:-->
+      <%#= prenda.color_secundario %>
+<!--    </span>-->
 
     <div class="prenda-only-one-icons">
       <%= link_to "", { :controller => :prendas, :action => :edit, id: prenda.id }, { class: "fa fa-pencil fa-fw"} %>
