--- a/app/views/prendas/_form.html.erb
+++ b/app/views/prendas/_form.html.erb
@@ -6,19 +6,19 @@
 
 
       <%= f.select :categoria, PrendaTipo.categoria.keys, {prompt: "Elija la categoria de prenda"},class:'form-items',required: true%>
-      <%= f.collection_select :prenda_tipo_id, PrendaTipo.all, :id, :tipo, {:prompt => "Elija el tipo de Prenda", :selected => params[:prenda_tipo_id]} , { class:'form-items'} %>
+      <%= f.collection_select :prenda_tipo_id, PrendaTipo.all, :id, :tipo, {:prompt => "Elija el tipo de Prenda", :selected => params[:prenda_tipo_id]} , { class:'form-items',required: true} %>
 
-      <%= f.select :material, Prenda.materials.keys, {prompt: "Elija el material de la prenda"}, {class:'form-items' } %>
+      <%= f.select :material, Prenda.materials.keys, {prompt: "Elija el material de la prenda"}, {class:'form-items',required: true} %>
 
       <%= f.label :color_primario,{class:'form-items-title'}  %>
-      <%= f.color_field :color_primario%>
+      <%= f.color_field :color_primario,required: true%>
       <%= f.label :color_secundario,{class:'form-items-title'}%>
-      <%= f.color_field :color_secundario %><br>
+      <%= f.color_field :color_secundario,required: true %><br>
 
-      <%= f.text_area :descripcion, {class:'form-items', placeholder:'Descripción' } %>
-      <%= f.label :imagen,{class:'form-items-title' }  %>
+      <%= f.text_area :descripcion, {class:'form-items', placeholder:'Descripción',required: true} %>
+      <%= f.label :imagen,{class:'form-items-title'}  %>
       <%= f.file_field :imagen, {class:'btn-item-image'}%><br/>
-      <%= f.collection_select :guardarropa_id,  Guardarropa.where(user: current_user), :id, :nombre, {:prompt => "Elija un guardarropas", :selected => params[:guardarropa_id]}, {class:'form-items' } %>
+      <%= f.collection_select :guardarropa_id,  Guardarropa.where(user: current_user), :id, :nombre, {:prompt => "Elija un guardarropas", :selected => params[:guardarropa_id]}, {class:'form-items',required: true } %>
 
       <div class="create-form-submit-buttons">
         <%= f.submit 'Guardar', {class:'btn-item-submit'} %>
