--- a/app/assets/stylesheets/prendas.scss
+++ b/app/assets/stylesheets/prendas.scss
@@ -22,7 +22,18 @@ img {
   width: 100%;
 }
 
+//////////Paginacion
 
+.pagination a, .pagination span.current, .pagination span.gap {
+  float: left;
+  padding: 0 14px;
+  line-height: 38px;
+  text-decoration: none;
+  background-color: white;
+  border: 1px solid #DDD;
+}
+
+//////////
 
 #prendas {
   margin: auto;
