--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -85,6 +85,30 @@ img {
 
 }
 
+
+//PROFILE
+
+#prendas-show{
+  display: none;
+}
+#atuendos-show{
+  display: none;
+}
+
+
+// PAGINACION
+.pagination a, .pagination span.current, .pagination span.gap {
+  float: left;
+  padding: 0 14px;
+  line-height: 38px;
+  text-decoration: none;
+  background-color: white;
+  border: 1px solid #DDD;
+}
+
+//////////////
+
+
 @media (min-width:650px) {
   #sign-up-section{
     padding-top: 8%;
