--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,6 +21,6 @@
     <% end %>
   </table>
 
-  <%#= paginate @users %>
+  <%= paginate @users %>
 </div>
 <%= link_to 'New User', new_user_path %>
