--- a/app/views/atuendos/index.html.erb
+++ b/app/views/atuendos/index.html.erb
@@ -35,8 +35,7 @@
 
       <%end%>
       <div class="btn-atuendo-add">
-        <a  href="/guardarropas/<%=+params[:guardarropa_id]%>/atuendos/new" >
-          Nuevo atuendo<i class="fa fa-plus"></i>
+        <a  href="/guardarropas/<%=+params[:guardarropa_id]%>/atuendos/new">Nuevo atuendo<i class="fa fa-plus"></i>
         </a>
       </div>
     <%end%>
