--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,9 +69,7 @@
                 <a href="/users/new" class="text-dark no-underline">Registrate</a>
               </li>
             <% else %>
-              <li>
-                <a href="/guardarropas" class="text-dark no-underline">Guardarropas</a>
-              </li>
+              <li><a href="/profile">Mi perfil</a></li>
               <% if current_user.admin?  %>
                 <li><a href="/users" class="text-dark no-underline">Usuarios</a>
                 </li>
