Ultimo cambios flujo

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -491,7 +491,7 @@ img {
   padding: 12px;
   cursor: pointer;
   border-radius: 2em;
-  background-color: #e30425;
+  background-color: #4e0d3a;
   font-family: 'Montserrat', sans-serif;
 }
 
