--- a/app/views/guardarropas/index.html.erb
+++ b/app/views/guardarropas/index.html.erb
@@ -1,4 +1,7 @@
 <div id="guardarropas">
+  <div class="go-back-profile-button">
+    <a href="/profile">Volver a mi perfil</a>
+  </div>
   <div class="container-guardarropas">
     <h2 class="guardarropas-title">Tus guardarropas</h2>
     <%= link_to "Crear guardarropa", new_guardarropa_path, class:"guardarropa-new-item-btn" %>
