--- a/app/views/guardarropas/show.html.erb
+++ b/app/views/guardarropas/show.html.erb
@@ -1,4 +1,7 @@
 <div class="guardarropas-show-container">
+  <div class="go-back-profile-button">
+    <a href="/profile">Volver a mi perfil</a>
+  </div>
   <h2 class="prendas-title"><%= @guardarropa.nombre %></h2>
 
   <div class="show-btns-container">
@@ -25,7 +28,6 @@
         Agregar nueva prenda  <i class="fa fa-plus"></i>
       </a>
     </div>
-
 
   </div>
 
