--- a/app/assets/stylesheets/guardarropas.scss
+++ b/app/assets/stylesheets/guardarropas.scss
@@ -194,8 +194,21 @@ img {
 
 .prenda-list-actions-icons a{
   color: #4e0d3a;
-
 }
+
+.go-back-profile-button a{
+  display: inline-block;
+  color: #FFFF;
+  background-color: #4e0d3a;
+  padding: 15px 20px;
+  margin: 3%;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
 @media (min-width:650px) {
 
   .guardarropas-title {
