--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,8 @@
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> No se puede guardar este usuario:</h2>
+<!--      <%#= pluralize(user.errors.count, "errores") %> ->-->
+      <h2>No se puede guardar este usuario:</h2>
 
       <ul>
         <% user.errors.full_messages.each do |message| %>
